2009-05-29  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomPeerResolverService.cs : implement some members.

2009-05-29  Atsushi Enomoto  <atsushi@ximian.com>

	* RegisterResponseInfo.cs : it does not always reply lifetime.

2009-05-28  Atsushi Enomoto  <atsushi@ximian.com>

	* RegisterResponseInfo.cs : oops, Marcos was right. .NET returns
	  "Update" element here.

2009-05-28  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceSettingsResponseInfo.cs, RegisterResponseInfo.cs,
	  RefreshResponseInfo.cs, ResolveInfo.cs, UpdateInfo.cs,
	  UnregisterInfo.cs, ResolveResponseInfo.cs, RefreshInfo.cs :
	  set explicit namespaces on DataContract so that their members can
	  be serialized in appropriate namespace (namespaces in
	  MessageBodyMemberAttribute does not apply there).

2009-05-27  Atsushi Enomoto  <atsushi@ximian.com>

	* ResolveInfo.cs : argument check.

2009-04-21  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerCustomResolverSettings.cs : added Clone().

2009-04-07  Atsushi Enomoto  <atsushi@ximian.com>

	* IPeerResolverContract.cs: fix SessionMode value.

2007-08-19  Atsushi Enomoto  <atsushi@ximian.com>

	* RegisterInfo.cs : marcos would have never thought that this is
	  the source of message xml incompatibility.

2007-08-19 Marcos Cobena (marcoscobena@gmail.com)

	* PeerCustomResolverSettings.cs, RefreshInfo.cs, RefreshResponseInfo.cs, 
	ServiceSettingsResponseInfo.cs, UnregisterInfo.cs, UpdateInfo.cs: Bunch of updates.

2007-08-19  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerCustomResolverSettings.cs : this class too.

2007-08-19  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerResolverSettings.cs : there is nothing actually supported in
	  this class, so don't forget MonoTODOs.

2007-08-17 Marcos Cobena (marcoscobena@gmail.com)

	* CustomPeerResolverService.cs: Updated to dependency types.
	* RegisterInfo.cs, RegisterResponseInfo.cs, ResolveInfo.cs, 
	ResolveResponseInfo.cs, UnregisterInfo.cs: Updated to produce same messages as .NET does.
